fix: Correção no label e input do index.html, para coincidir com o que está no alert do arquivo script.js

--- a/ProjetosProgramaria/Projeto_01_SiteAda/index.html
+++ b/ProjetosProgramaria/Projeto_01_SiteAda/index.html
@@ -80,8 +80,8 @@
         <label for="nome-da-usuaria">Nome:</label>
         <input id="nome-da-usuaria" type="text" >
         
-        <label for="email-da-usaria">Email:</label>
-        <input id="email-da-usaria" type="email">
+        <label for="email-da-usuaria">Email:</label>
+        <input id="email-da-usuaria" type="email">
 
         <label for="telefone-da-usuaria">Telefone:</label>
         <input id="telefone-da-usuaria" type="number">
